--- a/dlsys/3/hw3.ipynb
+++ b/dlsys/3/hw3.ipynb
@@ -27,11 +27,13 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/dlsys10714/mugrade.git\n",
-      "  Cloning https://github.com/dlsys10714/mugrade.git to /tmp/pip-req-build-c_f1evnx\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/dlsys10714/mugrade.git /tmp/pip-req-build-c_f1evnx\n",
+      "  Cloning https://github.com/dlsys10714/mugrade.git to /tmp/pip-req-build-3ebemrto\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/dlsys10714/mugrade.git /tmp/pip-req-build-3ebemrto\n",
       "  Resolved https://github.com/dlsys10714/mugrade.git to commit 656cdc2b7ad5a37e7a5347a7b0405df0acd72380\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: pybind11 in /home/ubuntu/miniconda3/lib/python3.12/site-packages (2.13.6)\n"
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: pybind11 in /home/ubuntu/.pyenv/versions/ai/lib/python3.12/site-packages (2.13.6)\n"
      ]
     }
    ],
@@ -61,33 +63,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Found pybind11: /home/ubuntu/miniconda3/lib/python3.12/site-packages/pybind11/include (found version \"2.13.6\")\n",
+      "-- Found Python: /home/ubuntu/.pyenv/versions/ai/bin/python3 (found version \"3.12.3\") found components: Development Interpreter Development.Module Development.Embed \n",
+      "-- Found pybind11: /home/ubuntu/.pyenv/versions/ai/lib/python3.12/site-packages/pybind11/include (found version \"2.13.6\")\n",
       "-- Found cuda, building cuda backend\n",
-      "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-      "\n",
+      "Sun Nov 10 03:47:32 2024       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 550.54.14              Driver Version: 550.54.14      CUDA Version: 12.4     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  Tesla V100-SXM2-16GB           Off |   00000000:00:1E.0 Off |                    0 |\n",
+      "| N/A   38C    P0             40W /  300W |       0MiB /  16384MiB |      0%      Default |\n",
+      "|                                         |                        |                  N/A |\n",
+      "+-----------------------------------------+------------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                              |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+      "|        ID   ID                                                               Usage      |\n",
+      "|=========================================================================================|\n",
+      "|  No running processes found                                                             |\n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "-- Autodetected CUDA architecture(s):  7.0\n",
       "-- Configuring done (1.1s)\n",
       "-- Generating done (0.0s)\n",
-      "-- Build files have been written to: /home/ubuntu/mlcourses/dlsys/3/build\n",
-      "make[1]: Entering directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make[2]: Entering directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make[3]: Entering directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make[3]: Leaving directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
+      "-- Build files have been written to: /home/ubuntu/dlsys/3/build\n",
+      "make[1]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
+      "make[2]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
+      "make[3]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
+      "make[3]: Leaving directory '/home/ubuntu/dlsys/3/build'\n",
       "[ 50%] Built target ndarray_backend_cpu\n",
-      "make[3]: Entering directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
+      "make[3]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
       "[ 75%] \u001b[34m\u001b[1mBuilding NVCC (Device) object CMakeFiles/ndarray_backend_cuda.dir/src/ndarray_backend_cuda_generated_ndarray_backend_cuda.cu.o\u001b[0m\n",
-      "nvcc fatal   : Unsupported gpu architecture 'compute_37'\n",
-      "\u001b[31mCMake Error at ndarray_backend_cuda_generated_ndarray_backend_cuda.cu.o.cmake:220 (message):\n",
-      "  Error generating\n",
-      "  /home/ubuntu/mlcourses/dlsys/3/build/CMakeFiles/ndarray_backend_cuda.dir/src/./ndarray_backend_cuda_generated_ndarray_backend_cuda.cu.o\n",
-      "\n",
-      "\u001b[0m\n",
-      "make[3]: *** [CMakeFiles/ndarray_backend_cuda.dir/build.make:601: CMakeFiles/ndarray_backend_cuda.dir/src/ndarray_backend_cuda_generated_ndarray_backend_cuda.cu.o] Error 1\n",
-      "make[3]: Leaving directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make[2]: *** [CMakeFiles/Makefile2:110: CMakeFiles/ndarray_backend_cuda.dir/all] Error 2\n",
-      "make[2]: Leaving directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make[1]: *** [Makefile:91: all] Error 2\n",
-      "make[1]: Leaving directory '/home/ubuntu/mlcourses/dlsys/3/build'\n",
-      "make: *** [Makefile:9: lib] Error 2\n"
+      "make[3]: Leaving directory '/home/ubuntu/dlsys/3/build'\n",
+      "make[3]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
+      "[100%] \u001b[32m\u001b[1mLinking CXX shared module /home/ubuntu/dlsys/3/python/needle/backend_ndarray/ndarray_backend_cuda.cpython-312-x86_64-linux-gnu.so\u001b[0m\n",
+      "make[3]: Leaving directory '/home/ubuntu/dlsys/3/build'\n",
+      "[100%] Built target ndarray_backend_cuda\n",
+      "make[2]: Leaving directory '/home/ubuntu/dlsys/3/build'\n",
+      "make[1]: Leaving directory '/home/ubuntu/dlsys/3/build'\n"
      ]
     }
    ],
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5c067d7c",
    "metadata": {
     "id": "glK6Q7Ik-2cJ"
@@ -127,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "72b04c94",
    "metadata": {
     "id": "e7aadcf9"
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "510e797b",
    "metadata": {
     "id": "835c3880"
@@ -247,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a8369a10",
    "metadata": {
     "id": "071b3063"
@@ -312,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ef8e1c4d",
    "metadata": {
     "id": "758969a1"
@@ -345,7 +361,7 @@
       "tests/hw3/test_ndarray.py::test_setitem_scalar[cpu-params2] \u001b[32mPASSED\u001b[0m\u001b[32m       [ 93%]\u001b[0m\n",
       "tests/hw3/test_ndarray.py::test_setitem_scalar[cpu-params3] \u001b[32mPASSED\u001b[0m\u001b[32m       [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m====================== \u001b[32m\u001b[1m15 passed\u001b[0m, \u001b[33m121 deselected\u001b[0m\u001b[32m in 0.33s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m15 passed\u001b[0m, \u001b[33m121 deselected\u001b[0m\u001b[32m in 0.34s\u001b[0m\u001b[32m ======================\u001b[0m\n"
      ]
     }
    ],
@@ -355,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4c232e29",
    "metadata": {
     "id": "74c98f6c"
@@ -396,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d74ae7d9",
    "metadata": {
     "id": "22943d08"
@@ -452,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1c2362c7",
    "metadata": {
     "id": "fddba8d9"
@@ -484,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2df917d1",
    "metadata": {
     "id": "de5382b3"
@@ -510,7 +526,7 @@
       "tests/hw3/test_ndarray.py::test_reduce_max[params2-cpu] \u001b[32mPASSED\u001b[0m\u001b[32m           [ 87%]\u001b[0m\n",
       "tests/hw3/test_ndarray.py::test_reduce_max[params3-cpu] \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m====================== \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m128 deselected\u001b[0m\u001b[32m in 0.33s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m128 deselected\u001b[0m\u001b[32m in 0.32s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -520,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f6f0f2fb",
    "metadata": {
     "id": "a1f1f484"
@@ -558,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "15590571",
    "metadata": {
     "id": "28771449"
@@ -596,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "eca927c6",
    "metadata": {
     "id": "5e0a7443"
@@ -608,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "7b16cac2",
    "metadata": {
     "id": "0d3e131e"
@@ -618,10 +634,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Found Python: /home/ubuntu/.pyenv/versions/ai/bin/python3 (found version \"3.12.3\") found components: Development Interpreter Development.Module Development.Embed \n",
       "-- Found pybind11: /home/ubuntu/.pyenv/versions/ai/lib/python3.12/site-packages/pybind11/include (found version \"2.13.6\")\n",
       "-- Found cuda, building cuda backend\n",
-      "Sun Nov 10 02:13:41 2024       \n",
+      "Sun Nov 10 03:47:59 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.54.14              Driver Version: 550.54.14      CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -642,7 +657,7 @@
       "|  No running processes found                                                             |\n",
       "+-----------------------------------------------------------------------------------------+\n",
       "-- Autodetected CUDA architecture(s):  7.0\n",
-      "-- Configuring done (1.1s)\n",
+      "-- Configuring done (0.9s)\n",
       "-- Generating done (0.0s)\n",
       "-- Build files have been written to: /home/ubuntu/dlsys/3/build\n",
       "make[1]: Entering directory '/home/ubuntu/dlsys/3/build'\n",
@@ -690,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "28c3c223",
    "metadata": {
     "id": "480d127f"
@@ -723,7 +738,7 @@
       "tests/hw3/test_ndarray.py::test_setitem_scalar[cuda-params2] \u001b[32mPASSED\u001b[0m\u001b[32m      [ 93%]\u001b[0m\n",
       "tests/hw3/test_ndarray.py::test_setitem_scalar[cuda-params3] \u001b[32mPASSED\u001b[0m\u001b[32m      [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m====================== \u001b[32m\u001b[1m15 passed\u001b[0m, \u001b[33m121 deselected\u001b[0m\u001b[32m in 0.89s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m15 passed\u001b[0m, \u001b[33m121 deselected\u001b[0m\u001b[32m in 0.92s\u001b[0m\u001b[32m ======================\u001b[0m\n"
      ]
     }
    ],
@@ -733,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "97a23c9d",
    "metadata": {
     "id": "98a83634"
@@ -769,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "df92045c",
    "metadata": {
     "id": "ee2d6dd8"
@@ -825,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "61e16b25",
    "metadata": {
     "id": "db80e3fa"
@@ -855,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "1a6c0211",
    "metadata": {
     "id": "10239c84"
@@ -891,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "505a3c36",
    "metadata": {
     "id": "0f75df69"
@@ -919,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "a186c12b",
    "metadata": {
     "id": "aa7b46d6"
@@ -957,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "c5383a77",
    "metadata": {
     "id": "3ae22cf2"
